# unplug

./: .gitignore  .gitmodules  README.md
demo-effect/: CMakeLists.txt
demo-effect/source/: CircularBuffers.hpp  Controller.cpp  Controller.hpp  CustomData.hpp  CustomSharedData.hpp  Entry.cpp  GainController.hpp  GainDsp.hpp  GainProcessor.cpp  GainProcessor.hpp  Id.hpp  Meters.hpp  NumParameters.hpp  Parameters.cpp  Parameters.hpp  Presets.cpp  Processor.cpp  Processor.hpp  UserInterface.cpp  UserInterface.hpp  version.h
examples/gain/: CMakeLists.txt
examples/gain/resource/: Info.plist
examples/gain/source/: Controller.hpp  CustomData.hpp  Entry.cpp  GainDsp.hpp  Id.hpp  Meters.hpp  Parameters.cpp  Parameters.hpp  Processing.cpp  Processor.cpp  Processor.hpp  SharedData.hpp  UserInterface.cpp  version.h
unplug/: .clang-format  OpaqueGl.cpp
unplug/imgui/: imgui_plugin_context.cpp  imgui_tls_context.cpp  imgui_user_config.h
unplug/impl/: OpaqueGl.cpp
unplug/include/unplug/: Automation.hpp  AutomationEvent.hpp  BlockSizeInfo.hpp  CircularBuffer.hpp  Color.hpp  ContextInfo.hpp  Controls.hpp  CustomDataWrapper.hpp  DemoUserInterface.hpp  DemoView.hpp  DenormalFlusher.hpp  DspUnit.hpp  GetParameterDescriptions.hpp  GetVersion.hpp  IO.hpp  Index.hpp  Knob.hpp  Math.hpp  MeterStorage.hpp  MidiMapping.hpp  NumIO.hpp  Oversampling.hpp  ParameterAccess.hpp  ParameterDescription.hpp  ParameterStorage.hpp  Parameters.hpp  Plot.hpp  PluginState.hpp  PluginView.hpp  PreAllocated.hpp  Presets.hpp  ProcessingData.hpp  RingBuffer.hpp  Serialization.hpp  SetLatencyInterface.hpp  SetupPluginFromDsp.hpp  SharedData.hpp  SharedDataWrapper.hpp  StringConversion.hpp  UnplugController.hpp  (+7 more)
unplug/include/unplug/detail/: CachedIO.hpp  EditRegister.hpp  EventHandler.hpp  GetSortedParameterDescriptiions.hpp  GetSortedParameterDescriptions.hpp  Keyboard.hpp  ModifierKeys.h  OpaqueGl.h  OpaqueGl.hpp  ParameterFromUserInterfaceCoordinates.hpp  SetupIOFromVst3ProcessData.hpp  StringConversion.hpp  StringConversionImpl.hpp  View.hpp  Vst3DBParameter.hpp  Vst3Keycodes.hpp  Vst3MessageIds.hpp  Vst3NonlinearParameter.hpp  Vst3ParameterAccess.hpp  Vst3Parameters.hpp  Vst3View.hpp
unplug/source/gl/: OpaqueGl.cpp
unplug/source/unplug/: Color.cpp  Controls.cpp  EditRegister.cpp  EventHandler.cpp  GetSortedParameterDescriptiions.cpp  GetSortedParameterDescriptions.cpp  Math.cpp  MeterStorage.cpp  MidiMapping.cpp  Oversampling.cpp  ParameterDescription.cpp  ParameterFromUserInterfaceCoordinates.cpp  ParameterStorage.cpp  Plot.cpp  Vst3ParameterAccess.cpp  Widgets.cpp
unplug/source/unplug/vst3/: UnplugController.cpp  UnplugProcessor.cpp  Vst3DBParameter.cpp  Vst3Keycodes.cpp  Vst3NonlinearParameter.cpp  Vst3ParameterAccess.cpp  Vst3View.cpp
